--- a/TestOracleDbConnectionConsoleApp/App.config
+++ b/TestOracleDbConnectionConsoleApp/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="OracleDbContext" connectionString="Data Source=(Description=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=localhost)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=XE)));DBA Privilege = SYSDBA;User Id = sys;Password=oracle" />
+  </connectionStrings>
 </configuration>
